embed.css
ulti-viewer :unresolved:after{padding:15px;content:'loading...';color:#ccc;}


ulti-viewer /deep/ #naviView{
  position:absolute;
  left:10px;
  bottom:10px;
  width:150px;
  height:150px;
  z-index: 11;
  -webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	
	/*pointer-events: none;*/
	
	background:white; opacity:0; filter:Alpha(opacity=0);
}

/*
Colors:
blue:#4ebcf6
darkblue : #2e7396
orangeYellow:#ffd200;
*/

/*ulti-viewer:-webkit-full-screen 
  {
    width:100% !important;
    height:100% !important;
    left:0px !important;
    top:0px !important;
  } */
  
/*fix for scrollbars*/
ulti-viewer /deep/ core-menu {
    overflow: hidden !important;
}  

ulti-viewer /deep/ paper-item {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }

/* all hovered paper-icon-buttons regardless of depth are getting this style*/
/*ulti-viewer /deep/ paper-icon-button{
vertical-align: middle;
}*/

/*custom ui elements*/
ulti-viewer /deep/ ui-base.core-selected /deep/ paper-icon-button{
  background:  #ffd200;
  color:white;
}

ulti-viewer /deep/ tooltip-shadow-button.core-selected /deep/ paper-icon-button{
  background:  #ffd200;
  color:white;
}


ulti-viewer /deep/ tooltip-dropdown-button.core-selected /deep/ x-trigger{
  background:  #ffd200;
  color:white;
}

ulti-viewer /deep/ tooltip-dropdown-button /deep/ #dropDownArrow{
  color:#4ebcf6;
  position:absolute;
  bottom:-5px;
  right:-6px;
  z-index: 10;
}




/*other , styling for ui elements*/
ulti-viewer /deep/ paper-icon-button:hover{
  color:white;
  background: #ffd200;
}  

ulti-viewer /deep/ paper-item {
      color:black;
      font-size: 0.8em;
      font-weight: 400;
      /*width:150px;*/
      height:40px;
}  

ulti-viewer /deep/ paper-item::shadow .button-content{
      /*color:green;*/
      height: 20px;
} 




ulti-viewer /deep/ paper-checkbox::shadow #checkbox.checked {
  border-color: #ffd200;
}
  
ulti-viewer /deep/ x-trigger:hover {
  background: #ffd200;
}  
ulti-viewer /deep/ x-trigger:hover::shadow core-icon{
  color:white;/*black*/
}
  
ulti-viewer /deep/ x-trigger /deep/ paper-dropdown:not(.no-padding)::shadow #scroller {
      box-sizing: border-box;
      /*padding: 8px;*/
      color:blue;
    }

ulti-viewer /deep/ x-trigger /deep/ paper-dropdown::shadow #scroller {
      box-sizing: border-box;
      padding: 8px;
      /*color:red;*/
    }
    
ulti-viewer /deep/ x-trigger /deep/ paper-item {
      color:black;
      font-size: 0.8em;
      font-weight: 400;
}  

ulti-viewer /deep/ x-trigger /deep/ paper-item:hover {
      color:#4ebcf6;
}  


ulti-viewer /deep/ x-trigger /deep/ paper-item.core-selected {
      background:#ffd200;
      color:black;
}  



ulti-viewer /deep/ x-trigger /deep/ paper-item::shadow .button-content{
      /*color:green;*/
      height: 20px;
} 
    
ulti-viewer /deep/ x-trigger /deep/ .open-below {
      top: 38px;
}

    
ulti-viewer /deep/ core-tooltip::shadow #tooltip {
  z-index: 0;
}

/*Top icons*/
ulti-viewer::shadow #infos{
  position:absolute;top:5px;right:20px;z-index:15;
}    

ulti-viewer::shadow #options{
  position:absolute;top:5px;right:60px;z-index:15;
}    

ulti-viewer::shadow #annotations{
  position:absolute;top:5px;right:300px;z-index:15; /*100px*/
}

ulti-viewer::shadow #transforms{
  position:absolute;top:5px;left:300px;z-index:15;
}

ulti-viewer::shadow #objProps{
  position:absolute;bottom:0px;left:0px;z-index:15;
  height: 25px;
  width: 100%;
  background:white;
  font-size: 0.8em;
}

ulti-viewer::shadow #objProps /deep/ input[type="number"]{
  max-width: 50px;
  border: none;
  /* height: 0.5em; */
  line-height: 0.8em;
  font-size: 0.8em;
  font-family: inherit;
}

ulti-viewer::shadow #objProps /deep/ input[type="color"]{
border: none;
padding: 0px;
margin: 0px;
width: 18px;
height: 15px;
}

ulti-viewer::shadow #gridProps{
  position:absolute;bottom:0px;right:80px;z-index:15;
  height: 25px;
  width: 200;
  font-size: 0.8em;
}

ulti-viewer::shadow #gridProps /deep/ select{
background: white;
border: white;
}


ulti-viewer::shadow #history{
  position:absolute;top:5px;left:380px;z-index:15;
}


ulti-viewer::shadow #inputOutput{
  position:absolute;top:5px;left:180px;z-index:15;

}


/*styling of 3d elements using css*/
ulti-viewer /deep/ dimensions-helper-group /deep/ distance-helper{
  color:red;
  background-color:#ffd200;
}

ulti-viewer /deep/ dimensions-helper-group /deep/ diameter-helper{
  color:#000;
  background-color:blue;
}

ulti-viewer /deep/ three-js{

  cursor:default;
}

/*overlay notes styling*/

ulti-viewer /deep/ overlay-note {
z-index:16;
width:20px;
height:20px;
border-radius: 50%;
position:absolute;
background: #ffd200;/*#494949;*/
color: black;/*white;*/
cursor:pointer;
font-size:13px;
font-weight:bold;
border: 1px solid; /*#FFEAEA;*/
}

ulti-viewer /deep/ overlay-note /deep/ h1{
font-size:1.05em;
margin:0px;
margin-bottom:3px;
}

ulti-viewer /deep/ overlay-note /deep/ span{
text-align: center;
display: block;
line-height: 20px;
font-size:16px;
}

ulti-viewer /deep/ overlay-note:hover /deep/ span{
  color: #494949;/*#4ebcf6;*/
}


ulti-viewer /deep/ overlay-note /deep/ .annotationContent{
  width: 200px;
  background: #ffd200;/*#494949;*/
  padding: 6px;
  position: absolute;
  left: 28px;
  top: 0px;
  font-weight: 300;
  
  
  -webkit-transition: opacity .15s ease-in-out;
  -moz-transition: opacity .15s ease-in-out;
  -ms-transition: opacity .15s ease-in-out;
  -o-transition: opacity .15s ease-in-out;
  transition: opacity .15s ease-in-out;
}

ulti-viewer /deep/ overlay-note /deep/ .annotationContent([resolved]){
  opacity:1;
visibility: visible;
}

ulti-viewer /deep/ overlay-note /deep/ .annotationContent([unresolved]){
  opacity:0;
  visibility:hidden;
}
/* ... */

